# cs-26-sw-2-06

./: .gitignore  CMakeLists.txt  README.md  VisualCode.html
Design/: Frontpage.html  FunctionDesign.js  More.html
src/: 1.json  heatmap.json  heatmap.txt
src/ClientSide/: MergeFile.js
src/ClientSide/Design/: CreateMaze.html  Frontpage.html  FunctionDesign.js  FunctionMazeGenerated.js  FunctionParameters.js  MazeGenerated.html  MazeVisual.js  More.html  MoreAndAbout.js  MoreStyle.css  NavigationBar.css  VisualDesign.css  frontpage.css  modificationButtonDesign.css  more.html  server.js
src/ServerSide/: httpRequestTest.c  main.c
src/ServerSide/DataTypes/: mazeDataTypes.c  mazeDataTypes.h  requestDataTypes.c  requestDataTypes.h
src/ServerSide/Heatmap/: heatmapGen.c  heatmapGen.h
src/ServerSide/Maze/: maze.c  maze.h
src/ServerSide/MazeAlteration/: changeMaze.c  changeMaze.h
src/ServerSide/MazeGeneration/: generateMaze.c  generateMaze.h
src/ServerSide/Mazes/: 0.json  1.json  12345.json
src/ServerSide/RequestManager/: fileUnpacker.c  fileUnpacker.h  requestExport.c  requestImport.c  requestManager.c  requestManager.h  uploadstringToDataStruct.c  uploadstringToDataStruct.h
